corrected spelling error

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -55,7 +55,7 @@ experience:
     institution: "Stellenbosch University, Stellenbosch, RSA"
     link: "https://www.ie.sun.ac.za/"
     bullets:
-      - "Project marking and module adim"
+      - "Project marking and module admin"
   - title: "Intern, Part-time"
     duration: "Mar 2021 - Jun 2021"
     institution: "Merlynn Intelligence Technologies, Centurion, RSA"
