--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -39,13 +39,13 @@ education:
 
 experience:
   - title: "Junior Lecturer, Part-time"
-    duration: "2025 - 2026"
+    duration: "2025 - "
     institution: "Stellenbosch University, Stellenbosch, RSA"
     link: "https://www.ie.sun.ac.za/"
     bullets:
       - "Lecturing and student supervision"
   - title: "Scholarship program"
-    duration: "2023"
+    duration: "2023 - 2024"
     institution: "BMW IT Hub, Pretoria, RSA"
     link: "https://www.bmwithub.co.za/"
     bullets:
