--- a/_data/film.yml
+++ b/_data/film.yml
@@ -1,63 +1,81 @@
 # _data/film.yml
 - image: "001.jpg"
-  alt: "Film photo 1"
+  alt: "Classic car at beer festival, Darling"
 
 - image: "002.jpg"
-  alt: "Film photo 2"
+  alt: "Ceres railway train car passageway"
 
 - image: "003.jpg"
-  alt: "Film photo 3"
+  alt: "Red Bull flugtag stunt plane, Cape Town"
 
 - image: "004.jpg"
-  alt: "Film photo 4"
+  alt: "Sunset, Kgalagadi"
 
 - image: "005.jpg"
-  alt: "Film photo 5"
+  alt: "Sunset backdrop, Kgalagadi"
 
 - image: "006.jpg"
-  alt: "Film photo 6"
+  alt: "Canada Place, Vancouver"
 
 - image: "007.jpg"
-  alt: "Film photo 7"
+  alt: "Harbour Air seaplane, Vancouver"
 
 - image: "008.jpg"
-  alt: "Film photo 8"
+  alt: "Parliament building, Victoria"
 
 - image: "009.jpg"
-  alt: "Film photo 9"
+  alt: "Lake Cowichan, Vancouver Island"
 
 - image: "010.jpg"
-  alt: "Film photo 10"
+  alt: "Skyscraper, Vancouver"
 
 - image: "011.jpg"
-  alt: "Film photo 11"
+  alt: "Main building, Quoin Rock"
 
 - image: "012.jpg"
-  alt: "Film photo 12"
+  alt: "Venus rising, Kalahari"
 
 - image: "013.jpg"
-  alt: "Film photo 13"
+  alt: "Ceres railway train"
 
 - image: "014.jpg"
-  alt: "Film photo 14"
+  alt: "Prasa metrorail, Kalk Bay"
 
 - image: "015.jpg"
-  alt: "Film photo 15"
+  alt: "Main building, Kirstenbosch Botanical Gardens"
 
 - image: "016.jpg"
-  alt: "Film photo 16"
+  alt: "Classic car storage, Cape Town"
 
 - image: "017.jpg"
-  alt: "Film photo 17"
+  alt: "Tokara gardens, Stellenbosch"
 
 - image: "018.jpg"
-  alt: "Film photo 18"
+  alt: "SA20 cricket, Newlands"
 
 - image: "019.jpg"
-  alt: "Film photo 19"
+  alt: "Abandoned farmstead, Tankwa Karoo"
 
 - image: "020.jpg"
-  alt: "Film photo 20"
+  alt: "Signal Hill sunset, Cape Town"
   
 - image: "021.jpg"
-  alt: "Film photo 21"
+  alt: "Bust statue, Quoin Rock"
+
+- image: "022.jpg"
+  alt: "The Big Wheel through the Clock Tower, VnA Waterfront"
+  
+- image: "023.jpg"
+  alt: "Lighthouse, Cape Agulhas"
+
+- image: "024.jpg"
+  alt: "Airport, Maun"
+
+- image: "025.jpg"
+  alt: "Bulb filament, Cape Town"
+
+- image: "026.jpg"
+  alt: "Sunset, Okavango Delta"
+
+- image: "027.jpg"
+  alt: "Vulture, Okavango Delta"
